@@ -2,5 +2,5 @@ org.gradle.jvmargs=-Xmx16384m -Dfile.encoding=UTF-8
 kotlin.code.style=official
 kotlin.version=1.9.20
 kotlin.native.ignoreDisabledTargets=true
-compose.version=1.5.10-rc01
+compose.version=1.5.10
 org.gradle.parallel=true
