@@ -2,7 +2,8 @@
 ======
 
  - See active friends
- -
+ - Add group pages
+ - Set group category
 
 0.9.69
 ======
